<resources>
    <string name="app_name">ITBookStore</string>
    <string name="title_home">New Books</string>
    <string name="title_dashboard">Search Books</string>
    <string name="title_notifications">Favourites</string>
    <string name="book_title">title</string>
    <string name="book_subtitle">subtitle</string>
    <string name="authors">authors</string>
    <string name="about_book">about book</string>
    <string name="find_more">find more</string>
    <string name="hello_blank_fragment">Search books by title, author, ISBN or keywords</string>
    <string name="search_btn">Find</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="login_btn">LOG IN</string>
    <string name="wrong_input_textview">Wrong login or password</string>
    <string name="registration">REGISTRATION</string>
    <string name="email">email</string>
    <string name="logout">LOGOUT</string>
    <string name="delete_from_favourites">DELETE FROM FAVOURITES</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="book_image">Book image</string>
    <string name="_10_00">10.00$</string>
</resources>