<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/book_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.Material.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:forceDarkAllowed="true"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_subtitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/_10_00"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_book" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/find_more" />

        <Button
            android:id="@+id/shareBtn"
            android:layout_width="64dp"
            android:layout_height="50dp"
            app:icon="?attr/actionModeShareDrawable"
            app:rippleColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/isFavouriteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:buttonTint="@color/purple_700"
            android:minWidth="40dp"
            android:minHeight="30dp"
            android:textColor="@color/white"
            android:textOff="@string/add_to_favourites"
            android:textOn="@string/delete_from_favourites" />

    </LinearLayout>
</LinearLayout>
